Committing before I break this again. DalekLight is finally fully fixed following a scope issue. ST2Building model assets fully restored, and ST2Building and ST2Rocket aligned within the new environment. Will do proper camera controls next, followed by the UI elements.

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ canvas {
 #emre{
   z-index: 11;
   opacity: 0;
-  transition: opacity 1.2s cubic-bezier(1,0.5,1,0.9);
+  transition: opacity 1.2s cubic-bezier(1,1,1,1);
   position: absolute;
   top: 5%;
   left: 32.7%;
